--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -4,6 +4,7 @@ $color-background-secondary: #fff;
 $color-section-bottom-border: #ccc;
 
 $color-sidebar-background-primary: rgba(102, 102, 102, 1);
+$color-sidebar-background-primary-mid: rgba(113, 113, 113, 1);
 $color-sidebar-background-primary-light: rgba(133, 133, 133, 1);
 $color-sidebar-background-secondary: rgba(215, 215, 215, 1);
 $color-sidebar-background-secondary-dark: #343b3e;
