--- a/resources/assets/sass/components/filter-selector.scss
+++ b/resources/assets/sass/components/filter-selector.scss
@@ -7,6 +7,10 @@
     display: flex;
     padding: 5px;
 
+    &:first-child {
+      margin-top: 0.5em;
+    }
+
     &:last-child {
       border-bottom: 0;
     }
@@ -19,12 +23,14 @@
   &__checkbox {
     @include selector-icon;
     background-color: $color-text-white;
+    margin-left: 0.5em;
     fill: black;
 
   }
 
   &__radio {
     @include selector-icon;
+    margin-left: 0.5em;
 
     &--selected::before {
       background: $color-text-white;
